# ComfyUI-RUM

./: .comfyignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  __init__.py  download_models.sh  local_config.example.json  nodes.py  pyproject.toml  requirements.txt  rum_diffusers.py  rum_native.py
.github/workflows/: publish_action.yml  test.yml
docs/: DEVELOPMENT.md  PUBLISHING.md
examples/: basic_workflow_api.json  diffusers_match_edit_workflow.json  diffusers_match_edit_workflow_api.json  diffusers_match_edit_workflow_gui.json  diffusers_match_workflow.json  diffusers_match_workflow_api.json  diffusers_match_workflow_gui.json
scripts/: check_install.py  download_models.py  install_diffusers_teacher_clip.py  queue_workflow.py
tests/: test_rum_native.py
